--- a/anketSitesi/entkinlik sayfası/hakkımızda.html
+++ b/anketSitesi/entkinlik sayfası/hakkımızda.html
@@ -13,7 +13,7 @@
 <body>
     <div class ="about">
        <div class ="main">
-        <img src="istockphoto-1398462038-612x612.jpg">
+        <img src="https://media.istockphoto.com/id/1398462038/tr/foto%C4%9Fraf/online-exam-or-test.jpg?s=612x612&w=0&k=20&c=TW9Nnj6A4VzpfsbuVYKqBhyd_9G2Cmc9ova4cwBZPks=">
         <div class ="about-text">
               <h1>Hakkımızda</h1>
               <h5>Yazılımcı <span>& Tasarımcı</span></h5>
